external-crates/move/crates/move-compiler/tests/move_check/expansion/invalid_unpack_assign_mdot_no_struct.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[EC03003]: unbound module member
  ┌─ tests/move_check/expansion/invalid_unpack_assign_mdot_no_struct.move:3:9
  │
3 │         Self::f {} = 0u64;
  │         ^^^^^^^ Unbound struct 'f' in current scope

error[EC03003]: unbound module member
  ┌─ tests/move_check/expansion/invalid_unpack_assign_mdot_no_struct.move:4:9
  │
4 │         Self::f() = 0u64;
  │         ^^^^^^^ Unbound struct 'f' in current scope

error[EC13001]: feature is not supported in specified edition
  ┌─ tests/move_check/expansion/invalid_unpack_assign_mdot_no_struct.move:4:9
  │
4 │         Self::f() = 0u64;
  │         ^^^^^^^^^ Positional fields are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.
