external-crates/move/crates/move-compiler/tests/move_check/expansion/invalid_unpack_assign_mdot_no_struct.move
module 0x8675309::M {
    fun foo() {
        Self::f {} = 0u64;
        Self::f() = 0u64;
    }
}
